# utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
agents/: pve-provisioner.md  session-summarizer.md  utils-promoter.md
decisions/: ADR-0001-mcp-tool-provider.md
hooks/: events.py  hooks.json  observe.py  ping.sh
lib/: _envelope.py
mcp/: README.md  package.json  server.ts  tsconfig.json
mcp/lib/: exec.ts  manifest.ts  schema.ts
mcp/manifests/: calendar.yaml  clipboard.yaml  e3p.yaml  json.yaml  mac-app.yaml  mail.yaml  notebooklm.yaml  notify.yaml  pdf.yaml  pve.yaml  reminders.yaml  safari.yaml  screenshot.yaml  skill-lint.yaml  skill-usage.yaml  subject-lift.yaml  tally.yaml  tokens.yaml  ubereats.yaml  uuid.yaml
mcp/src/: server.ts
mcp/tests/: argv.test.ts  confirm-gate.test.ts  exec.test.ts  manifest.test.ts  schema.test.ts  timeout-grace.test.ts  tool-registry.test.ts
monitors/: monitors.json  pve-vm-state.sh
scripts/: calendar.py  case.py  clipboard.sh  e3p.py  hash.py  image-pad.py  image-resize.py  image.py  json.py  keynote.py  mac-app.py  mail.py  md2slide.py  memory.py  notebooklm.py  notify.sh  pangu.py  password.py  pdf.py  port.py  pve.py  reminders.py  safari.py  screenshot.sh  skill-lint.py  skill-usage.py  slugify.py  ssl-check.py  statusline.py  subject-lift.swift  tally.py  tokens.py  ubereats.py  uuid.py
skills/catchup/: SKILL.md
skills/daily/: SKILL.md
skills/journal/: SKILL.md
skills/keynote-style/: SKILL.md
src/: __init__.py  main.py
(+59 files in other folders)
